# esp32_home

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  build.sh  partitions.csv  sdkconfig  sdkconfig.defaults  task_plan.md
Doc/: API.md  快速开始.md  模块.md  音频架构.md
components/app_control/: CMakeLists.txt  app_control.c  app_control.h
components/application/: CMakeLists.txt  application.c  application.h
components/bh1750/: CMakeLists.txt  bh1750.c  bh1750.h
components/buzzer/: CMakeLists.txt  buzzer.c  buzzer.h
components/common/: CMakeLists.txt  app_state.c  app_state.h  app_types.h
components/config/: config.h
components/dht11/: CMakeLists.txt  dht11.c  dht11.h
components/fan/: CMakeLists.txt  fan.c  fan.h
components/led/: led.c  led.h
components/managed_wrappers/: CMakeLists.txt
components/managed_wrappers/bh1750/: bh1750_driver.c  bh1750_driver.h
components/managed_wrappers/dht/: dht_driver.c  dht_driver.h
components/managed_wrappers/rgb_led/: rgb_led.h
components/managed_wrappers/servo/: iot_servo.c  servo_driver.c  servo_driver.h
components/motor/: CMakeLists.txt  motor.c  motor.h
components/mq2/: CMakeLists.txt  mq2.c  mq2.h
components/rgb_led/: CMakeLists.txt  rgb_led.c
components/sr/: CMakeLists.txt  afe_processor.c  afe_processor.h  inmp441_driver.c  inmp441_driver.h  voice_recognition.c  voice_recognition.h
components/web_ui/: CMakeLists.txt  http_server.c
components/web_ui/html/: index.html
components/wifi/: CMakeLists.txt  http_server.c  http_server.h  wifi.c  wifi.cpp  wifi.h
components/wifi/html/: index.html
main/: CMakeLists.txt  idf_component.yml  main.c
